Adapted XML template whitespaces

--- a/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
@@ -8,5 +8,4 @@
     {{/semantics.Unit}}
     {{#semantics.Creator}}
         creator="{{semantics.Creator.value}}"
-    {{/semantics.Creator}}
->
+    {{/semantics.Creator}} >
