--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateCell.mustache
@@ -1,7 +1,4 @@
-{{!Cell content}}
-<date>{{date}}</date>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+<date>{{date}}</date></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
