--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/integerCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/integerCell.mustache
@@ -1,8 +1,5 @@
-{{!Cell content}}
-{{cellValue}}
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+{{cellValue}}</{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
-    </row>
+</row>
 {{/columnModel.isLastColumn}}
