--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
@@ -1,7 +1,4 @@
-{{!Cell content}}
-<time>{{time}}</time>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+<time>{{time}}</time></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
