--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateTimeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateTimeCell.mustache
@@ -1,8 +1,5 @@
-{{!Cell content}}
 <date>{{date}}</date>
-<time>{{time}}</time>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+<time>{{time}}</time></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
