--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geolocationCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geolocationCell.mustache
@@ -1,12 +1,9 @@
-{{!Cell content}}
 <location>
     <latitude>{{location.latitude}}</latitude>
     <longitude>{{location.longitude}}</longitude>
     <altitude>{{location.altitude}}</altitude>
     <accuracy>{{location.accuracy}}</accuracy>
-</location>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+</location></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
