--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
@@ -1,4 +1,3 @@
-{{!Cell content}}
 <enum>
     {{#locationList}}
     <enumValue index="{{pathElementIndex}}">
@@ -10,9 +9,7 @@
         </location>
     </enumValue>
     {{/locationList}}
-</enum>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+</enum></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
