--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/multipleChoiceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/multipleChoiceCell.mustache
@@ -1,11 +1,8 @@
-{{!Cell content}}
 <collection>
     {{#cellValues}}
     <collectionValue>{{.}}</collectionValue>
     {{/cellValues}}
-</collection>
-{{!Closing tag for the cell}}
-</{{columnModel.columnIdentifier}}>
+</collection></{{columnModel.columnIdentifier}}>
 {{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
